compiler/testData/cli/jvm/apiVersion.kt
fun test() {
    ""::class.isInstance(42)
}
